add styles to events layout

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -17,6 +17,7 @@ ru:
     no_glad: "Сожалею что вам не понравилось"
   common:
     free: 'Бесплатно'
+    image_label: 'Изображение'
     create_acc: 'Создать аккаунт'
     update_acc: 'Редактировать аккаунт'
     sign_in_acc: 'Войти аккаунт'
