add translation for update

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -13,6 +13,7 @@ ru:
     invalid_sign_in: 'Неправильный адрес электронной почты или пароль!'
     sign_out: 'Вы вышли из аккаунта!'
     event_created: 'Вы создали мероприятие!'
+    event_updated: 'Событие изменено успешно!'
     glad_you: "Рад что вам понравилось!"
     no_glad: "Сожалею что вам не понравилось"
   common:
