--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -17,6 +17,8 @@ ru:
     glad_you: "Рад что вам понравилось!"
     no_glad: "Сожалею что вам не понравилось"
   common:
+    thank_signup: "Спасибо за регистрацию!"
+    require_signin: "Пожалуйста, войдите сначала!"
     ago: 'назад'
     add_new_event: 'Новое событие'
     free: 'Бесплатно'
