--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -17,6 +17,12 @@ ru:
     glad_you: "Рад что вам понравилось!"
     no_glad: "Сожалею что вам не понравилось"
   common:
+    email_not_found: "Email не найдет! Пожалуйста введите правильный Email"
+    email_with_instructions: "Письмо с инструкцией по восстановлению пароля отправлено"
+    pass_expired: "Срок пароля для сброса истек"
+    pass_reset: "Пароль успешно сброшен!"
+    pass_update_failed: "Неудалось обновить пароль!"
+    token_expired: "Срок ключа для сброса пароля истек. Пожалуйта начните процесс сброса пароля заново."
     thank_signup: "Спасибо за регистрацию!"
     require_signin: "Пожалуйста, войдите сначала!"
     ago: 'назад'
@@ -62,6 +68,9 @@ ru:
       how_heard: 'Как узнали'
       pick: 'Выберите источник'
       new: 'Зарегистрироваться'
+  sessions:
+    new:
+      forgot_pass: 'Забыли пароль?'
   layouts:
     header:
       sign_up: 'Регистрация'
