--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -80,6 +80,10 @@ ru:
       past: 'Прошлые'
       free: 'Бесплатные'
       recent: 'Недавние'
+  user_mailer:
+    password_reset:
+      reset_header: 'Чтобы сбросить пароль, перейдите по ссылке ниже:'
+      reset_body: 'Если вы не просили изменить свой пароль, просто проигнорируйте это письмо, и ваш пароль останется прежним.'
   password_resets:
     edit:
       new_pass: 'Введите новый пароль: '
