--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -75,3 +75,7 @@ en:
       new_event: 'Create a New Event'
     edit:
       edit: 'Editing'
+  will_paginate:
+    previous_label: "&#8592; Previous"
+    next_label: "Next &#8594;"
+    page_gap: "&hellip;"
