--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -131,3 +131,7 @@ ru:
       - :month
       - :year
     month_names: [~, Январь, Февраль, Март, Апрель, Май, Июнь, Июль, Август, Сентябрь, Октябрь, Ноябрь, Декабрь]
+  will_paginate:
+    previous_label: "&#8592; Предыдущая"
+    next_label: "Следующая &#8594;"
+    page_gap: "&hellip;"
