--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -68,6 +68,8 @@ ru:
       how_heard: 'Как узнали'
       pick: 'Выберите источник'
       new: 'Зарегистрироваться'
+      amount: 'Цена'
+      pay: 'Оплатить'
   sessions:
     new:
       forgot_pass: 'Забыли пароль?'
@@ -135,3 +137,17 @@ ru:
     previous_label: "&#8592; Предыдущая"
     next_label: "Следующая &#8594;"
     page_gap: "&hellip;"
+  stripe:
+    errors:
+      incorrect_number: "Неверный номер карты."
+      invalid_number: "Недействительный номер карты."
+      invalid_expiry_month: "Неверный месяц истечения срока действия карты."
+      invalid_expiry_year: "Неверный год истечения срока действия карты."
+      invalid_cvc: "Неверный код карты."
+      expired_card: "Истёк срок действия карты."
+      incorrect_cvc: "Недействительный код карты."
+      incorrect_zip: "ZIP-код карты не прошёл проверку."
+      card_declined: "Карта была отклонена."
+      missing: "Нет такой карты у клиента который производит оплату."
+      processing_error: "Во время обработки карты произошла ошибка."
+      rate_limit: "Произошла ошибка из-за слишком большого количества запросов API. Пожалуйста, сообщите нам, если вы часто сталкиваетесь с этой ошибкой."
