--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -151,3 +151,12 @@ ru:
       missing: "Нет такой карты у клиента который производит оплату."
       processing_error: "Во время обработки карты произошла ошибка."
       rate_limit: "Произошла ошибка из-за слишком большого количества запросов API. Пожалуйста, сообщите нам, если вы часто сталкиваетесь с этой ошибкой."
+  activerecord:
+   attributes:
+     how_heard:
+      newsletter:  "Новости"
+      blog_post:  "Пост в блоге"
+      twitter:  "Твиттер"
+      web_search:  "Поисковик"
+      friend_coworker:  "Друг/Коллега"
+      other:  "Другой"
